[package]
name = "unijs3"
version = "0.1.0"
edition = "2021"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
v8 = "0.94.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.66"
wasm-bindgen-futures = "0.4.39"
wasm-bindgen = "0.2.89"
web-sys = { version = "0.3.66", features = [
    "Exception",
    "Window",
    "console",
] }

[dev-dependencies]
tracing = "0.1.40"
unilog.git = "https://github.com/jabuwu/unilog"
wasm-bindgen-test = "0.3.0"
